--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +16,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "nodemon": "^2.0.20"
   }
 }
