--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -15,9 +15,12 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "mongoose": "^8.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
