[feat] Add proxy.conf.json

--- a/client/angular.json
+++ b/client/angular.json
@@ -73,6 +73,10 @@
               "browserTarget": "client:build:development"
             }
           },
+          "options": {
+            "browserTarget": "client:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
