--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "path": "^0.12.7"
+    "nodemailer": "^6.9.12",
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.21",
+    "@types/nodemailer": "^6.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
