--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,9 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "path": "^0.12.7"
     "nodemailer": "^6.9.12",
+    "path": "^0.12.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -34,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.21",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
